# Case-Study-1-Customer-Insights

./: .gitignore  LICENSE  README.md
CustomerInsights/: Start-PyVenv.ps1  prototype.ipynb  pyproject.toml  sentiment-prototype.ipynb
Data/Ex_Files_Customer_Insights_Tools_Analysis/Exercise Files/: 02_01.ipynb  02_02.ipynb  02_03.pbix  03_01.ipynb  03_02.pbix  04_01.ipynb  04_02.pbix  05_01.ipynb  05_02.pbix  06_01.ipynb  06_02.pbix
